Adjust ISPADDED_WIDTH, change DetailsRowCheck left/right padding to fix 2px overflow bug.

--- a/packages/office-ui-fabric-react/src/components/DetailsList/DetailsHeader.scss
+++ b/packages/office-ui-fabric-react/src/components/DetailsList/DetailsHeader.scss
@@ -21,7 +21,6 @@ $isPaddedMargin: 24px;
   border-bottom: 1px solid $dividerColor;
   cursor: default;
   user-select: none;
-  @include ms-padding-left(4px);
 
   &.rootIsSelectAllHidden {
     .cell.cellIsCheck {
