--- a/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRow.scss
+++ b/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRow.scss
@@ -76,7 +76,6 @@ $detailsList-item-focus-meta-text-color: $ms-color-neutralDark;
   box-sizing: border-box;
 
   @include ms-text-align(left);
-  @include ms-padding-left(4px);
   vertical-align: top;
 
   // Default State hover
