--- a/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRowCheck.scss
+++ b/packages/office-ui-fabric-react/src/components/DetailsList/DetailsRowCheck.scss
@@ -18,7 +18,7 @@
 }
 
 button.check {
-  padding: 3px 4px;
+  padding: 3px 3px;
 }
 
 .owner {
